Fix attachment image sizing issue on mobile screen

--- a/viewer/front/components/MessagesSection.less
+++ b/viewer/front/components/MessagesSection.less
@@ -93,7 +93,7 @@
         .slack-message-content {
           .slack-message-head {
             display: block;
-            line-height: 0.8rem;
+            line-height: 1rem;
             padding-bottom: 0.6rem;
           }
           .slack-message-user-name {
